# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import usersRouter from "./users";
 import coursesRouter from "./courses";
+import enrollmentsRouter from "./enrollments";
 import scheduleRouter from "./schedule";
 import gradesRouter from "./grades";
 import attendanceRouter from "./attendance";
@@ -17,6 +18,7 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(usersRouter);
 router.use(coursesRouter);
+router.use(enrollmentsRouter);
 router.use(scheduleRouter);
 router.use(gradesRouter);
 router.use(attendanceRouter);
